--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -78,7 +78,9 @@ test:
 production:
   sessions:
     default:
-      uri: <%= ENV['MONGOHQ_URL'] %>
-      options:
-        skip_version_check: true
-        safe: true
+      database: fx_star_production
+      hosts:
+        - localhost:27017
+  options:
+    skip_version_check: true
+    safe: true
